# sakura

./: .gitignore  AI_AGENT_TOGGLE_FIX.md  CONSOLE_CLEANUP.md  DEBUG_EMPTY_REQUESTS.md  EC2-GUIDE.md  FIXES_APPLIED.md  FIX_MESSAGE_LOOP.md  FIX_UNKNOWN_CHATS_ISSUE.md  FORM_SUBMISSION_BUG_FIX.md  PERFORMANCE_FIX.md  POLLING_FIXES.md  PROJECT_STRUCTURE.md  README.md  TEST_DATA_FLOW.md  TEST_NOW.md  TROUBLESHOOTING.md  WEBSOCKET_DIAGNOSTIC.md  WEBSOCKET_MICROSERVICE_SETUP.md  WEBSOCKET_REAL_TIME_TEST.md  check_chats.py  compare_chats.py  count_agent_inbox_chats.py  count_all_chats.py  investigate_unmatched.py  list_all_chats.py  main.py  package-lock.json  package-lock.txt  package.json  requirements.txt
backend/: ENVIRONMENT_SETUP.md  Procfile  REFACTOR_README.md  RENDER_DEPLOYMENT.md  actions.py  aops.json  env.example  main.py  main_new.py  monog_test.py  pyproject.toml  pyproject_minimal.toml  requirements.txt  requirements_new.txt  start-dev.cmd  start.sh  storage.py  test.txt  test_app.py  users.json
backend/app/: main.py
backend/faiss_index/: index.faiss  index.pkl
backend/jsonl_data/: email-protection_chunks.jsonl  index.html@p=10382_chunks.jsonl  index.html@p=10924_chunks.jsonl  index.html@p=11107_chunks.jsonl  index.html@p=11143_chunks.jsonl  index.html@p=11297_chunks.jsonl  index.html@p=11304_chunks.jsonl  index.html@p=11577_chunks.jsonl  index.html@p=11636_chunks.jsonl  index.html@p=12107_chunks.jsonl  index.html@p=1460_chunks.jsonl  index.html@p=1585_chunks.jsonl  index.html@p=1859_chunks.jsonl  index.html@p=2231_chunks.jsonl  index.html@p=2416_chunks.jsonl  index.html@p=2486_chunks.jsonl  index.html@p=2498_chunks.jsonl  index.html@p=2585_chunks.jsonl  index.html@p=2687_chunks.jsonl  index.html@p=2707_chunks.jsonl  index.html@p=2821_chunks.jsonl  index.html@p=3509_chunks.jsonl  index.html@p=3584_chunks.jsonl  index.html@p=4925_chunks.jsonl  index.html@p=5757_chunks.jsonl  (+69 more)
sakura-backend-clean/: .gitignore  CONNECTOR_TROUBLESHOOTING.md  README.md  check_index.py  clear_all_customer_data.py  main.py  pyproject.toml  requirements.txt
(+483 files in other folders)
