[project]
name = "sakura-backend"
version = "0.1.0"
description = "Backend for Sakura AI Concierge"
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pymongo[srv]",
    "python-dotenv",
    "langgraph",
    "langchain",
    "langchain-community",
    "langchain-huggingface",
    "jsonlines",
    "tqdm",
    "sentence-transformers>=5.1.1",
    "langchain-google-genai>=2.1.12",
    "faiss-cpu>=1.12.0",
]
