[project]
name = "sakura-backend-clean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "certifi>=2025.10.5",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.1",
    "google-generativeai>=0.3.2",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.0.0",
    "langsmith>=0.4.38",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.15.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]
