[project]
name = "sakura-backend-clean"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "certifi>=2025.10.5",
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.1",
    "httpx>=0.25.0",
    "jsonlines>=4.0.0",
    "langchain>=0.2.16",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langchain-huggingface>=1.0.0",
    "langgraph>=0.2.28",
    "langsmith>=0.4.38",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "pymongo>=4.15.3",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "tqdm>=4.66.1",
    "uvicorn[standard]>=0.38.0",
    "websockets>=12.0",
    "pypdf2>=3.0.1",
    "python-docx>=1.2.0",
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
]
